# Mongomantic

./: .deepsource.toml  .pre-commit-config.yaml  404.html  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  SECURITY.md  TODO.md  cookiecutter-config-file.yml  index.html  mkdocs.yml  pyproject.toml  setup.cfg  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: build.yml  docs.yml  semgrep.yml
docker/: README.md
docs/: index.md  repository.md
mongomantic/: __init__.py  config.py
mongomantic/core/: base_repository.py  database.py  errors.py  index.py  mongo_model.py  production_repository.py
mongomantic/utils/: safe_repository.py
repository/: index.html
search/: search_index.json
tests/: conftest.py  test_base_repository.py  user.py  user_repository.py
tests/model/: test_indexes.py
