# Poetry pyproject.toml: https://python-poetry.org/docs/pyproject/

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "mongomantic"
version = "0.3.1"
description = "A MongoDB Python ORM, built on Pydantic and PyMongo."
readme = "README.md"
authors = [
  "mongomantic <rami@hyperchess.com>"
]
license = "MIT"
repository = "https://github.com/RamiAwar/mongomantic"
homepage = "https://github.com/RamiAwar/mongomantic"

# Keywords description https://python-poetry.org/docs/pyproject/#keywords
keywords = []  # Update me

# Pypi classifiers: https://pypi.org/classifiers/
classifiers = [  # Update me
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.scripts]
# Entry points for the package https://python-poetry.org/docs/pyproject/#scripts
"mongomantic" = "mongomantic.__main__:app"

[tool.poetry.dependencies]
python = "^3.7"
importlib_metadata = {version = ">=1.6,<4.0", python = "<3.8"}
rich = "^9.8.2"
bson = "^0.5.10"
pydantic = "^1.8.1"
pymongo = "^3.11.3"
requests = "^2.25.1"
wily = "^1.19.0"

[tool.poetry.dev-dependencies]
darglint = "^1.5.8"
isort = "^5.7.0"
pyupgrade = "^2.12.0"
black = "^20.8b1"
mypy = "^0.790"
bandit = "^1.7.0"
safety = "^1.10.3"
pytest = "^6.2.1"
pylint = "^2.6.0"
pydocstyle = "^6.0.0"
pre-commit = "^2.9.3"
mongomock = "^3.22.1"
flake8 = "^3.9.0"

[tool.black]
# https://github.com/psf/black
line-length = 120
target-version = ["py38"]

[tool.isort]
# https://github.com/timothycrosley/isort/
known_typing = "typing,types,typing_extensions,mypy,mypy_extensions"
sections = "FUTURE,TYPING,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
include_trailing_comma = true
default_section = "FIRSTPARTY"
multi_line_output = 3
indent = 4
force_grid_wrap = 0
use_parentheses = true
line_length = 120
